<resources>
    <string name="app_name">Babel</string>
    <string name="search">Найти</string>
    <string name="authorOrName">Введите автора или название книги</string>
    <string name="institutionNameLabel">Наименование учреждения:</string>
    <string name="institutionName">Наименование учреждения</string>
    <string name="institutionAdressLabel">Адрес учреждения:</string>
    <string name="institutionAdress">Адрес учреждения</string>
    <string name="cityNameLabel">Наименование города:</string>
    <string name="cityName">Наименование города</string>
    <string name="btnSettings">Настройки</string>
    <string name="btnSelect">Выбрать</string>
    <string name="btnClose">Закрыть</string>
    <string name="nameLabelRoom">Наименование комнаты</string>
    <string name="numLabelRoom">Номер комнаты</string>
    <string name="WifiList">Список точек</string>
    <string name="title_activity_libraries_list">Учреждения культуры г. Рубцовска</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_floor">FloorActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_settings_wi_fi">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Настройка координат</string>
    <string name="title_notifications">Описание</string>
    <string name="tvNameRoom">Наименование комнаты</string>
    <string name="choordMPoint">Координата M точки</string>
    <string name="nameLabelNumberFloor">Этаж</string>
</resources>