<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackColor"
    android:orientation="vertical"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:id="@+id/main_activity"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/editTextTextPersonName3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/mainTextColor"
            android:ems="10"
            android:inputType="textPersonName"
            android:tooltipText="@string/authorOrName" />

        <Button
            android:id="@+id/btnSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxHeight="35dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <ListView
            android:id="@+id/cityItems"
            android:layout_width="match_parent"
            android:layout_height="575dp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="2dp"
            tools:layout_editor_absoluteY="76dp">

        </ListView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">
        <Button
            android:id="@+id/settings"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/btnSelect"/>
        <Button
            android:id="@+id/select"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/btnSettings"/>
        <Button
            android:id="@+id/close_app"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/btnClose"/>
    </LinearLayout>

</LinearLayout>