<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/NameLabelTextColor"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/institutionNameLabel"/>

        <TextView
            android:id="@+id/tvNameInstitution"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:scrollHorizontally="false"
            android:singleLine="false"
            android:textColor="@color/NameTextColor"
            android:textAppearance="?android:attr/textAppearanceLarge"
            tools:text="@string/institutionName" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/AdressLabelTextColor"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/institutionAdressLabel"/>

        <TextView
            android:id="@+id/tvAdress"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:scrollHorizontally="false"
            android:singleLine="false"
            android:textColor="@color/AdressTextColor"
            android:textAppearance="?android:attr/textAppearanceMedium"
            tools:text="@string/institutionAdress" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_librry" />
    </LinearLayout>
</RelativeLayout>