<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_wifi_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WifiSettings">

    <TextView
        android:id="@+id/text_label_name_room"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/tvNameRoom"
        android:textAlignment="gravity"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/text_label_nameMPoint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/choordMPoint"
        android:textAlignment="gravity"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.16" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="163dp"
        android:layout_height="28dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/WifiList"
        android:textAlignment="gravity"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.489" />

    <TextView
        android:id="@+id/text_"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="Координата L точки"
        android:textAlignment="gravity"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.336" />

    <EditText
        android:id="@+id/edNameRoom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/text_label_nameMPoint"
        app:layout_constraintTop_toBottomOf="@+id/text_label_name_room"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="3dp"
        tools:text="Name" />

    <EditText
        android:id="@+id/edChoordM"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="0"
        app:layout_constraintBottom_toTopOf="@+id/text_"
        app:layout_constraintTop_toBottomOf="@+id/text_label_nameMPoint"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="7dp" />

    <EditText
        android:id="@+id/edChoordL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="0"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/text_"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="6dp" />

    <ListView
        android:id="@+id/listItem"
        android:layout_width="433dp"
        android:layout_height="164dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Сохранить данные"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listItem"
        app:layout_constraintVertical_bias="0.2" />

    <Button
        android:id="@+id/btnSkan"
        android:layout_width="199dp"
        android:layout_height="38dp"
        android:layout_marginTop="2dp"
        android:text="Сканировать"
        app:layout_constraintBottom_toTopOf="@+id/listItem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/edChoordL"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>